--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -51,9 +51,14 @@
         padding-top: 3%;
     }
 
-    div.sheet-repeating-container {
-        button { 
-            font-variant: none; 
+    input.sheet-toggles {
+        position: relative;
+        opacity: 0;
+        z-index: 2;
+
+        &:checked + span {
+            color: $primary;
+            margin-left: 5%;
         }
     }
 
@@ -110,12 +115,11 @@ div.sheet-pc {
         }
 
         div.sheet-skill-list {
-            div.sheet-row {
-                grid-template-columns: 60% 1fr 1fr 1fr 1fr;
+            div.sheet-rowx {
+                grid-template-columns: 65% 1fr 1fr 1fr 1fr;
 
                 h2 {
                     display: inline-block;
-                    width: fit-content;
 
                     &[data-i18n='trained'] { grid-column: 2;  }
                     &[data-i18n='10+'] { grid-column: 3; }
@@ -127,16 +131,49 @@ div.sheet-pc {
 
         div.sheet-left-col {
             display: inline-block;
+            margin-right: 2%;
             width: 35%;
         }
 
         div.sheet-right-col {
             display: inline-block;
-            widows: 40%;
+            width: 25%;
+
+            input[name='attr_collapse'],
+            input[name='attr_collapse'] + span {
+                grid-area: 1 / 3 / 1 / 3;
+            }
+
+            input[name='attr_settings'],
+            input[name='attr_settings'] + span {
+                grid-area: 1 / 4 / 1 / 4;
+            }
+
+            div.sheet-collapse,
+            div.sheet-settings {
+                grid-column: 1 / 5;
+            }
+
+            div.sheet-settings {
+                grid-template-columns: 1fr;
+            }
         }
     }
 
 }
+
+/*  REPEATING SECTIONS
+    ============================= */
+    div.sheet-repeating-container {
+        button { 
+            font-variant: none; 
+        }
+
+        textarea {
+            margin-top: 2%;
+        }
+    }
+
 
 /*  SWITCH
     ============================= */
@@ -157,51 +194,4 @@ div.sheet-pc {
 
 /*  SHOW & HIDE SHEETS
     ============================= */
-%displaynone {  display: none; }
-%displayInlineGrid { display: inline-grid;}
-
-$sheets: 'character', 'holdings', 'feast', 'npc', 'entourage';
-@each $value in $sheets {
-    div.sheet-#{$value} {
-      @extend %displayInlineGrid;
-    }
-
-    input[name='attr_sheet_type']:not([value='#{$value}']) ~ div.sheet-#{$value} {
-       @extend %displaynone;
-    }
-}
-
-input[name='attr_sheet_type']:not([value='feast']) ~ div.sheet-tabs select[name='attr_feast_type'],
-input[name='attr_sheet_type'][value='feast'] ~ div.sheet-tabs select[name='attr_character_type'] {
-    @extend %displaynone;
- }
-
-$types: 'knight', 'woman';
-@each $value in $types {
-    input[name='attr_character_type']:not([value="#{$value}"]) ~ div.sheet-character div.sheet-col,
-    input[name='attr_character_type']:not([value="#{$value}"]) ~ div.sheet-holdings div.sheet-col,
-    input[name='attr_character_type']:not([value="#{$value}"]) ~ div.sheet-entourage div.sheet-row {
-        & div.sheet-row .sheet-#{$value},
-        & div.sheet-personal-data div.sheet-row .sheet-#{$value},
-        & div.sheet-personality-traits .sheet-#{$value},
-        & div.sheet-personality-traits div.sheet-row .sheet-#{$value},
-        & div.sheet-equipment-carried .sheet-#{$value},
-        & div.sheet-skills .sheet-#{$value},
-        & div.sheet-squire .sheet-#{$value},
-        & .sheet-#{$value},
-        & div.sheet-combat-skills .sheet-#{$value},
-        & div.sheet-horse div.sheet-row .sheet-#{$value},
-        & div.sheeet-family-history div.sheet-row,
-        & .sheet-#{$value},
-        & div.sheet-col .sheet-#{$value} {
-            @extend %displaynone;
-        }  
-    }
-}
-
-$feasttypes: 'record', 'characters';
-@each $value in $feasttypes {
-    input[name='attr_feast_type']:not([value="#{$value}"]) ~ div.sheet-feast div.sheet-#{$value} {
-        @extend %displaynone;
-    }
-}
+    @import 'src/scss/_hide';
